// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DroppablePlaceholder snapshot renders 1`] = `
<div
  className="className"
>
  <PlaceHolder>
    <Previews
      choices={
        Array [
          Object {
            "content": "content",
            "id": "1",
          },
        ]
      }
      onDeleteChoice={[MockFunction]}
    />
  </PlaceHolder>
</div>
`;

exports[`DroppablePlaceholder snapshot renders helper 1`] = `
<div
  className="className"
>
  <PlaceHolder>
    <WithStyles(Component) />
  </PlaceHolder>
</div>
`;
